address container spacing issues

--- a/styles.css
+++ b/styles.css
@@ -130,7 +130,7 @@ li  {
 input, button {
     display: block;
     width: 100%;
-    padding: var(--space200) var(--space300);
+    padding: 14px var(--space200);
     border-radius: 10px;
     margin: var(--space100) 0 var(--space200);
 }
@@ -237,8 +237,9 @@ picture {
     #container {
         justify-content: center;
         width: 600px;
-        padding: var(--space200);
+        padding: 20px;
         border-radius: 24px;
+        box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
     }
 
     picture {
@@ -256,7 +257,7 @@ picture {
     }
 
     .text-mobile-one {
-        font-size: 60px;
+        font-size: 54px;
     }
 
     #success {
@@ -303,8 +304,12 @@ picture {
 
     main {
         max-width: 500px;
+        padding: var(--space400)
     }
 
+    h1 {
+        margin: 0;
+    }
     
     picture, img {
         max-width: 500px;
